# python_grpc_library

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  genhtml.sh  my_service.proto  my_service_py.py  requirements_lock.txt  test_my_service.py
fee/bar/: BUILD.bazel  my_service_py_bar.py  test_my_service_bar.py
foo/bar/: my_service_py_bar.py  test_my_service_bar.py
