load("@rules_proto_grpc//python:python_grpc_library.bzl", "python_grpc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "my_service_grpc",
    srcs = ["my_service.proto"],
)

python_grpc_library(
    name = "my_service_grpc_py",
    protos = [":my_service_grpc"],
    visibility = ["//visibility:public"],
)
