load("@rules_proto_grpc//python:python_grpc_library.bzl", "python_grpc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_python//python:defs.bzl", "py_test")
load("@pip_deps//:requirements.bzl", "requirement")

proto_library(
    name = "my_service_grpc",
    srcs = ["my_service.proto"],
    import_prefix = "myservice_grpc",
)

python_grpc_library(
    name = "my_service_grpc_py",
    protos = [":my_service_grpc"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "my_service_py",
    srcs = ["my_service_py.py"],
    deps = [
        ":my_service_grpc_py",
    ],
)

py_test(
    name = "test_my_service",
    srcs = ["test_my_service.py"],
    main = "test_my_service.py",
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        ":my_service_grpc_py",
        requirement("ddtrace"),
    ],
)


py_test(
    name = "test_my_service_1",
    srcs = ["test_my_service.py"],
    main = "test_my_service.py",
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        requirement("ddtrace"),
        ":my_service_grpc_py",
    ],
)
